fix some errors

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p></p>
             <p class="lead">A web platform for the creation and visualization of comic strips designed and implemented within a team of 4.</p>
             <p style="font-size:13.5px;"> * Written in Typescript for client and server side development, and used Express for server side development </p>
-            <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link">Click here to check it out!</a>
+            <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here to check it out!</a>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" src="img/mav.png" alt="mav">
