add clickable icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/my.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <title>Peter Yan</title>
   </head>
@@ -43,7 +44,16 @@
                 <img class="rounded-circle" src="img/yp.jpg" alt="me" width="160" height="160">
           </div>
           <h1 class="jumbotron-heading"> Hello, my name is Peter! </h1>
-          <p class="lead text-dark"> I'm a new graduate majoring in Computer Science at the University of British Columbia. </p>
+          <p class="font-italic"> I'm a new graduate majoring in Computer Science at the University of British Columbia. </p>
+          <a class="btn btn-social" href="https://github.com/yanlinchengrui" target="_blank" title="Github">
+            <i class="fab fa-github"></i>
+          </a>
+          <a class="btn btn-social" href="data/rez.pdf" target="_blank" title="Resume">
+            <i class="fas fa-file"></i>
+          </a>
+          <a class="btn btn-social" href="mailto:yanlinchengrui@hotmail.com" title="Email"> 
+            <i class="fas fa-envelope"></i>
+          </a>
         </div>
       </div>
 
@@ -57,7 +67,7 @@
             <h1 class="featurette-heading">Comic Web Application</h1>
             <p></p>
             <p class="lead">A web platform for the creation and visualization of comic strips designed and implemented within a team of 4.</p>
-            <p style="font-size:13.5px;"> * Written in Typescript for client and server side development, and used Express for server side development </p>
+            <p style="font-size:13.5px; font-style: oblique;"> * Written in Typescript for client and server side development, and used Express for server side development </p>
             <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here to check it out!</a>
           </div>
           <div class="col-md-5">
@@ -72,7 +82,7 @@
             <h1 class="featurette-heading">Meetup Android Application</h1>
             <p></p>
             <p class="lead">An Android application that enables students to find meetup restaurants when they have common breaks and to check the routes between different courses on the map.</p>
-            <p style="font-size:13.5px;"> * Written in Java and used live data from Foursquare for restaurants and MapQuest for routing information </p>
+            <p style="font-size:13.5px; font-style: oblique;"> * Written in Java and used live data from Foursquare for restaurants and MapQuest for routing information </p>
           </div>
           <div class="col-md-5 order-md-1">
             <img class="featurette-image img-fluid mx-auto" src="img/meetup.png" alt="meetup">
