modified some details

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </button>
         <div class="collapse navbar-collapse navbar-right" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" target="_blank" href="https://github.com/yanlinchengrui">Github <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link active" target="_blank" href="data/rez.pdf">Resume </a>
-            <a class="nav-item nav-link active" href="mailto:yanlinchengrui@hotmail.com">Contact </a>
+            <a class="nav-item nav-link" target="_blank" href="https://github.com/yanlinchengrui">Github <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" target="_blank" href="data/rez.pdf">Resume </a>
+            <a class="nav-item nav-link" href="mailto:yanlinchengrui@hotmail.com">Contact </a>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
                 <img class="rounded-circle" src="img/yp.jpg" alt="me" width="160" height="160">
           </div>
           <h1 class="jumbotron-heading"> Hello, my name is Peter! </h1>
-          <p class="font-italic"> I'm a new graduate majoring in Computer Science at the University of British Columbia. </p>
+          <p class="font-italic"> BSc. in Computer Science, University of British Columbia </p>
           <a class="btn btn-social" href="https://github.com/yanlinchengrui" target="_blank" title="Github">
             <i class="fab fa-github"></i>
           </a>
@@ -65,13 +65,13 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h1 class="featurette-heading">Comic Web Application</h1>
-            <p></p>
+            <hr class="title-divider">
             <p class="lead">A web platform for the creation and visualization of comic strips designed and implemented within a team of 4.</p>
-            <p style="font-size:13.5px; font-style: oblique;"> * Written in Typescript for client and server side development, and used Express for server side development </p>
+            <p style="font-size:13.5px; font-style: oblique; opacity: 0.5"> // Written in Typescript for client and server side development, and used Express for server side development </p>
             <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here to check it out!</a>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="img/mav.png" alt="mav">
+            <img class="featurette-image rounded img-fluid mx-auto" src="img/mav.png" alt="mav">
           </div>
         </div>
 
@@ -80,12 +80,12 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h1 class="featurette-heading">Meetup Android Application</h1>
-            <p></p>
+            <hr class="title-divider">
             <p class="lead">An Android application that enables students to find meetup restaurants when they have common breaks and to check the routes between different courses on the map.</p>
-            <p style="font-size:13.5px; font-style: oblique;"> * Written in Java and used live data from Foursquare for restaurants and MapQuest for routing information </p>
+            <p style="font-size:13.5px; font-style: oblique; opacity: 0.5"> // Written in Java and used live data from Foursquare for restaurants and MapQuest for routing information </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="img/meetup.png" alt="meetup">
+            <img class="featurette-image rounded img-fluid mx-auto" src="img/meetup.png" alt="meetup">
           </div>
         </div>
 
@@ -94,11 +94,11 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h1 class="featurette-heading">Portfolio Webpage</h1>
-            <p></p>
+            <hr class="title-divider">
             <p class="lead">My simple portfolio webpage built with Bootstrap.</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="img/port.png" alt="port">
+            <img class="featurette-image rounded img-fluid mx-auto" src="img/port.png" alt="port">
           </div>
         </div>
 
