added linkedin information

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           <a class="btn btn-social" href="https://github.com/yanlinchengrui" target="_blank" title="Github">
             <i class="fab fa-github"></i>
           </a>
+          <a class="btn btn-social" href="https://www.linkedin.com/in/peterlinyan/" target="_blank" title="LinkedIn">
+            <i class="fab fa-linkedin"></i>
+          </a>
           <a class="btn btn-social" href="data/rez.pdf" target="_blank" title="Resume">
             <i class="fas fa-file"></i>
           </a>
@@ -67,7 +70,7 @@
             <h1 class="featurette-heading">Comic Web Application</h1>
             <hr class="title-divider">
             <p class="lead">A web platform for the creation and visualization of comic strips designed and implemented within a team of 4.</p>
-            <p style="font-size:13.5px; font-style: oblique; opacity: 0.5"> // Written in Typescript for client and server side development, and used Express for server side development </p>
+            <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Written in Typescript for client and server side development, and used Express for server side development </p>
             <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here to check it out!</a>
           </div>
           <div class="col-md-5">
@@ -82,7 +85,7 @@
             <h1 class="featurette-heading">Meetup Android Application</h1>
             <hr class="title-divider">
             <p class="lead">An Android application that enables students to find meetup restaurants when they have common breaks and to check the routes between different courses on the map.</p>
-            <p style="font-size:13.5px; font-style: oblique; opacity: 0.5"> // Written in Java and used live data from Foursquare for restaurants and MapQuest for routing information </p>
+            <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Written in Java and used live data from Foursquare for restaurants and MapQuest for routing information </p>
           </div>
           <div class="col-md-5 order-md-1">
             <img class="featurette-image rounded img-fluid mx-auto" src="img/meetup.png" alt="meetup">
