added new nav-link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="collapse navbar-collapse navbar-right" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" target="_blank" href="https://github.com/yanlinchengrui">Github <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" target="_blank" href="https://www.linkedin.com/in/peterlinyan/">LinkedIn </a>
             <a class="nav-item nav-link" target="_blank" href="data/rez.pdf">Resume </a>
             <a class="nav-item nav-link" href="mailto:yanlinchengrui@hotmail.com">Contact </a>
           </div>
@@ -52,7 +53,7 @@
             <i class="fab fa-linkedin"></i>
           </a>
           <a class="btn btn-social" href="data/rez.pdf" target="_blank" title="Resume">
-            <i class="fas fa-file"></i>
+            <i class="fas fa-file-alt"></i>
           </a>
           <a class="btn btn-social" href="mailto:yanlinchengrui@hotmail.com" title="Email"> 
             <i class="fas fa-envelope"></i>
