added clickable image

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/my.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/my.css">
 
     <title>Peter Yan</title>
   </head>
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container d-flex justify-content-between">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a class="navbar-brand d-flex align-items-center" href="javascript:window.location.reload(true)">
           <strong>Peter Yan</strong>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,10 +72,12 @@
             <hr class="title-divider">
             <p class="lead">A web platform for the creation and visualization of comic strips designed and implemented within a team of 4.</p>
             <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Written in Typescript for client and server side development, and used Express for server side development </p>
-            <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here to check it out!</a>
+            <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here or the image on the right to check it out!</a>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image rounded img-fluid mx-auto" src="img/mav.png" alt="mav">
+            <a href="http://marvelcomiccollab.herokuapp.com/comics" target="_blank" title="The comic website">
+              <img class="featurette-image rounded img-fluid mx-auto" src="img/mav.png" alt="mav">
+            </a>
           </div>
         </div>
 
@@ -109,7 +111,7 @@
         <hr class="featurette-divider">
 
       </div>
-
+      
     </main>
 
     <!-- Footer -->
