--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </button>
         <div class="collapse navbar-collapse navbar-right" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" target="_blank" href="https://github.com/yanlinchengrui">Github <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" target="_blank" href="https://www.linkedin.com/in/peterlinyan/">LinkedIn </a>
-            <a class="nav-item nav-link" target="_blank" href="data/rez.pdf">Resume </a>
-            <a class="nav-item nav-link" href="mailto:yanlinchengrui@hotmail.com">Contact </a>
+            <a class="nav-item nav-link active" target="_blank" href="https://github.com/yanlinchengrui">Github <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" target="_blank" href="https://www.linkedin.com/in/peterlinyan/">LinkedIn </a>
+            <a class="nav-item nav-link active" target="_blank" href="data/PeterYan(resume).pdf">Resume </a>
+            <a class="nav-item nav-link active" href="mailto:yanlinchengrui@hotmail.com">Contact </a>
           </div>
         </div>
       </div>
@@ -45,14 +45,14 @@
                 <img class="rounded-circle" src="img/yp.jpg" alt="me" width="160" height="160">
           </div>
           <h1 class="jumbotron-heading"> Hello, my name is Peter! </h1>
-          <p class="font-italic"> BSc. in Computer Science, University of British Columbia </p>
+          <p style="margin:0 0" class="font-italic"> BSc. in Computer Science, University of British Columbia </p>
           <a class="btn btn-social" href="https://github.com/yanlinchengrui" target="_blank" title="Github">
             <i class="fab fa-github"></i>
           </a>
           <a class="btn btn-social" href="https://www.linkedin.com/in/peterlinyan/" target="_blank" title="LinkedIn">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a class="btn btn-social" href="data/rez.pdf" target="_blank" title="Resume">
+          <a class="btn btn-social" href="data/PeterYan(resume).pdf" target="_blank" title="Resume">
             <i class="fas fa-file-alt"></i>
           </a>
           <a class="btn btn-social" href="mailto:yanlinchengrui@hotmail.com" title="Email"> 
@@ -62,7 +62,22 @@
       </div>
 
       <!-- Container -->
-      <div class="container marketing">
+      <div class="container">
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h1 class="featurette-heading">Players & Stats Applications</h1>
+            <hr class="title-divider">
+            <p class="lead">A React Native application that shows all NBA players in a given year and their career stats if available.</p>
+            <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Built with React Native (JavaScript and React) </p>
+            <a href="https://github.com/yanlinchengrui/show-players-and-stats" class="card-link" target="_blank">Check it out on Github!</a>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <img style="display:flex; justify-content:center; width:50%; border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/myProj.gif" alt="myProj">
+          </div>
+        </div>
 
         <hr class="featurette-divider">
 
@@ -76,7 +91,7 @@
           </div>
           <div class="col-md-5">
             <a href="http://marvelcomiccollab.herokuapp.com/comics" target="_blank" title="The comic website">
-              <img class="featurette-image rounded img-fluid mx-auto" src="img/mav.png" alt="mav">
+              <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/mav.png" alt="mav">
             </a>
           </div>
         </div>
@@ -91,7 +106,7 @@
             <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Written in Java and used live data from Foursquare for restaurants and MapQuest for routing information </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="featurette-image rounded img-fluid mx-auto" src="img/meetup.png" alt="meetup">
+            <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/meetup.png" alt="meetup">
           </div>
         </div>
 
@@ -104,14 +119,14 @@
             <p class="lead">My simple portfolio webpage built with Bootstrap.</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image rounded img-fluid mx-auto" src="img/port.png" alt="port">
+            <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/port.png" alt="port">
           </div>
         </div>
 
         <hr class="featurette-divider">
 
       </div>
-      
+
     </main>
 
     <!-- Footer -->
