added mav gif and updated resume

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
           <div class="col-md-5">
             <a href="http://marvelcomiccollab.herokuapp.com/comics" target="_blank" title="The comic website">
-              <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/mav.png" alt="mav">
+              <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/mav.gif" alt="mav">
             </a>
           </div>
         </div>
