updated index and resume

--- a/index.html
+++ b/index.html
@@ -26,10 +26,18 @@
         </button>
         <div class="collapse navbar-collapse navbar-right" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" target="_blank" href="https://github.com/yanlinchengrui">Github <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link active" target="_blank" href="https://www.linkedin.com/in/peterlinyan/">LinkedIn </a>
-            <a class="nav-item nav-link active" target="_blank" href="data/PeterYan(resume).pdf">Resume </a>
-            <a class="nav-item nav-link active" href="mailto:yanlinchengrui@hotmail.com">Contact </a>
+              <a class="btn btn-social" href="https://github.com/yanlinchengrui" target="_blank" title="Github">
+                <i class="fab fa-github"></i>
+              </a>
+              <a class="btn btn-social" href="https://www.linkedin.com/in/peterlinyan/" target="_blank" title="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a class="btn btn-social" href="data/PeterYan(resume).pdf" target="_blank" title="Resume">
+                <i class="fas fa-file-alt"></i>
+              </a>
+              <a class="btn btn-social" href="mailto:yanlinchengrui@hotmail.com" title="Email"> 
+                <i class="fas fa-envelope"></i>
+              </a>
           </div>
         </div>
       </div>
@@ -46,18 +54,6 @@
           </div>
           <h1 class="jumbotron-heading"> Hello, my name is Peter! </h1>
           <p style="margin:0 0" class="font-italic"> BSc. in Computer Science, University of British Columbia </p>
-          <a class="btn btn-social" href="https://github.com/yanlinchengrui" target="_blank" title="Github">
-            <i class="fab fa-github"></i>
-          </a>
-          <a class="btn btn-social" href="https://www.linkedin.com/in/peterlinyan/" target="_blank" title="LinkedIn">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a class="btn btn-social" href="data/PeterYan(resume).pdf" target="_blank" title="Resume">
-            <i class="fas fa-file-alt"></i>
-          </a>
-          <a class="btn btn-social" href="mailto:yanlinchengrui@hotmail.com" title="Email"> 
-            <i class="fas fa-envelope"></i>
-          </a>
         </div>
       </div>
 
@@ -82,14 +78,14 @@
         <hr class="featurette-divider">
 
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 order-md-1">
             <h1 class="featurette-heading">Comic Web Application</h1>
             <hr class="title-divider">
             <p class="lead">A web platform for the creation and visualization of comic strips designed and implemented within a team of 4.</p>
             <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Written in Typescript for client and server side development, and used Express for server side development </p>
             <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here or the image on the right to check it out!</a>
           </div>
-          <div class="col-md-5">
+          <div class="col-md-5 order-md-2">
             <a href="http://marvelcomiccollab.herokuapp.com/comics" target="_blank" title="The comic website">
               <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/mav.gif" alt="mav">
             </a>
