upload new projs and rez

--- a/index.html
+++ b/index.html
@@ -64,6 +64,38 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
+            <h1 class="featurette-heading">TomoMap</h1>
+            <hr class="title-divider">
+            <p class="lead">A web application that allows users to leave their messages and names and put icons on the map.</p>
+            <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Created using React, Node.js, MongoDB and deployed on Heroku and Now.sh </p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <a href="https://tomomap.now.sh/" target="_blank" title="TomoMap">
+              <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/tomomap.gif" alt="tomomap">
+            </a>
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h1 class="featurette-heading">Forkify Recipe App</h1>
+            <hr class="title-divider">
+            <p class="lead">A JavaScript web application that helps searching over 1 million recipes</p>
+            <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Responsible for implementing JavaScript part using JavaScript ES6, NPM, Babel and Webpack </p>
+          </div>
+          <div class="col-md-5">
+            <a href="https://yanlinchengrui.github.io/MyForkify/" target="_blank" title="MyForkify">
+              <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/forkify.gif" alt="forkify">
+            </a>
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
             <h1 class="featurette-heading">Players & Stats Applications</h1>
             <hr class="title-divider">
             <p class="lead">A React Native application that shows all NBA players in a given year and their career stats if available.</p>
@@ -83,39 +115,12 @@
             <hr class="title-divider">
             <p class="lead">A web platform for the creation and visualization of comic strips designed and implemented within a team of 4.</p>
             <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Written in Typescript for client and server side development, and used Express for server side development </p>
-            <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here or the image on the right to check it out!</a>
+            <!-- <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here or the image on the right to check it out!</a> -->
           </div>
           <div class="col-md-5 order-md-2">
             <a href="http://marvelcomiccollab.herokuapp.com/comics" target="_blank" title="The comic website">
               <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/mav.gif" alt="mav">
             </a>
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h1 class="featurette-heading">Meetup Android Application</h1>
-            <hr class="title-divider">
-            <p class="lead">An Android application that enables students to find meetup restaurants when they have common breaks and to check the routes between different courses on the map.</p>
-            <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Written in Java and used live data from Foursquare for restaurants and MapQuest for routing information </p>
-          </div>
-          <div class="col-md-5 order-md-1">
-            <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/meetup.png" alt="meetup">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h1 class="featurette-heading">Portfolio Webpage</h1>
-            <hr class="title-divider">
-            <p class="lead">My simple portfolio webpage built with Bootstrap.</p>
-          </div>
-          <div class="col-md-5">
-            <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/port.png" alt="port">
           </div>
         </div>
 
