add hover to imgz

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="jumbotron text-center">
         <div class="container">
           <div class="col-md-12 meee">
-                <img class="rounded-circle" src="img/yp.jpg" alt="me" width="160" height="160">
+            <img class="rounded-circle" src="img/yp.jpg" alt="me" width="160" height="160">
           </div>
           <h1 class="jumbotron-heading"> Hello, my name is Peter! </h1>
           <p style="margin:0 0" class="font-italic"> BSc. in Computer Science, University of British Columbia </p>
@@ -70,9 +70,13 @@
             <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Created using React, Node.js, MongoDB and deployed on Heroku and Now.sh </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <a href="https://tomomap.now.sh/" target="_blank" title="TomoMap">
-              <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/tomomap.gif" alt="tomomap">
-            </a>
+            <div class="hovereffect">
+                <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/tomomap.gif" alt="tomomap">
+                <div class="overlay">
+                    <h2>TomoMap</h2>
+                    <a class="info" target="_blank" href="https://tomomap.now.sh/"> <i class="fas fa-link"></i>   Link here!</a>
+                </div>
+            </div>
           </div>
         </div>
 
@@ -86,9 +90,14 @@
             <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Responsible for implementing JavaScript part using JavaScript ES6, NPM, Babel and Webpack </p>
           </div>
           <div class="col-md-5">
-            <a href="https://yanlinchengrui.github.io/MyForkify/" target="_blank" title="MyForkify">
-              <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/forkify.gif" alt="forkify">
-            </a>
+            <div class="hovereffect">
+                <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/forkify.gif" alt="forkify">
+                <div class="overlay">
+                    <h2>Forkify</h2>
+                    <a class="info" target="_blank" href="https://yanlinchengrui.github.io/MyForkify/"> <i class="fas fa-link"></i>   Link here!</a>
+                    <a class="info" target="_blank" href="https://github.com/yanlinchengrui/MyForkify"> <i class="fab fa-github-square"></i>    Github</a>
+                </div>
+            </div>
           </div>
         </div>
 
@@ -100,10 +109,16 @@
             <hr class="title-divider">
             <p class="lead">A React Native application that shows all NBA players in a given year and their career stats if available.</p>
             <p style="font-size:13.5px; font-style: oblique; opacity: 0.75"> // Built with React Native (JavaScript and React) </p>
-            <a href="https://github.com/yanlinchengrui/show-players-and-stats" class="card-link" target="_blank">Check it out on Github!</a>
+            <!-- <a href="https://github.com/yanlinchengrui/show-players-and-stats" class="card-link" target="_blank">Check it out on Github!</a> -->
           </div>
           <div class="col-md-5 order-md-1">
-            <img style="display:flex; justify-content:center; width:50%; border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/myProj.gif" alt="myProj">
+            <div class="hovereffect">
+                <img style="display:flex; justify-content:center; width:50%; border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/myProj.gif" alt="myProj">
+                <div class="overlay">
+                    <h2>NBA Players & Stats</h2>
+                    <a class="info" target="_blank" href="https://github.com/yanlinchengrui/show-players-and-stats"> <i class="fab fa-github-square"></i>    Github</a>
+                </div>
+            </div>
           </div>
         </div>
 
@@ -118,8 +133,13 @@
             <!-- <a href="http://marvelcomiccollab.herokuapp.com/comics" class="card-link" target="_blank">Click here or the image on the right to check it out!</a> -->
           </div>
           <div class="col-md-5 order-md-2">
-            <a href="http://marvelcomiccollab.herokuapp.com/comics" target="_blank" title="The comic website">
-              <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/mav.gif" alt="mav">
+            <div class="hovereffect">
+                <img style="border:3px solid black" class="featurette-image rounded img-fluid mx-auto" src="img/mav.gif" alt="mav">
+                <div class="overlay">
+                    <h2>Marvel</h2>
+                    <a class="info" target="_blank" href="http://marvelcomiccollab.herokuapp.com/comics"> <i class="fas fa-link"></i>   Link here!</a>
+                </div>
+            </div>              
             </a>
           </div>
         </div>
@@ -132,7 +152,7 @@
 
     <!-- Footer -->
     <footer class="container">
-        &copy; 2018 Peter Yan
+        &copy; 2019 Peter Yan
     </footer>
 
     <!-- Bootstrap core JavaScript ================================================== -->    
