--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container d-flex justify-content-between">
         <a class="navbar-brand d-flex align-items-center" href="javascript:window.location.reload(true)">
           <strong>Peter Yan</strong>
